# dd2419_ws

./: .gitignore  .gitmodules  99-robp.rules  README.md  pixi.toml  rviz_config.rviz
PlatformIO/Projects/dd2419/: platformio.ini
PlatformIO/Projects/dd2419/src/: main.cpp
calibration/: calibration_fisheye.npz
maps/: map_1_1.csv  meta.json  workspace_1.csv
scripts/: calibration.py  map_visualization.py
src/arm_grasping/: package.xml  setup.cfg  setup.py
src/arm_grasping/arm_grasping/: arm_grasping.py  box_detection.py
src/brian/: package.xml  setup.py
src/brian/brian/: brain.py  dummy_server.py  explorer_goal_service.py  get_goal_service.py  get_map.py
src/detection/: package.xml  pixi.toml  setup.py
src/detection/detection/: detection.py  pointcloud_filter.py
src/display_markers/: package.xml  setup.py
src/display_markers/display_markers/: display_markers.py
src/fast_odom/: CMakeLists.txt  package.xml  pixi.toml
src/fast_odom/src/: fast_odom.cpp
src/learning_tf2_py/: package.xml  pixi.toml  setup.py
src/learning_tf2_py/learning_tf2_py/: executors.py  interpolation.py  threading.py  timestamp.py
src/localization/: CMakeLists.txt  package.xml  pixi.toml
src/localization/src/: localization.cpp
src/napping/: package.xml  setup.cfg  setup.py
src/napping/napping/: exploration_mapping.py  fov_tracking.py  mapping.py
src/navigation/: package.xml  setup.py
src/navigation/navigation/: navigation.py
src/novigation/: package.xml  setup.cfg  setup.py
src/novigation/novigation/: dispatcher.py  goal_reciever.py  map_1_1.csv  map_inflator.py  novigation.py  path_planner.py  random_dispatcher.py  sim_robot.py  tail_maker.py  test_goal_sender.py  test_map_publisher.py  test_pose_publisher.py  workspace_1.csv
src/obstacle_mapper/: CMakeLists.txt  package.xml  pixi.toml
src/obstacle_mapper/src/: obstacle_mapper.cpp
src/odometry/: package.xml  pixi.toml  setup.py
src/odometry/odometry/: odometry.py
src/rc_control/: package.xml  setup.py
src/rc_control/rc_control/: rc.py  rc2.py
src/robp_arm/: CMakeLists.txt  package.xml  pixi.toml  setup.cfg  setup.py  something.py
src/robp_arm/robp_arm/: arm_move_action_server.py  robp_arm.py
src/robp_arm/src/: robp_arm.cpp
src/robp_autocomplete/: package.xml  pixi.toml  setup.cfg  setup.py
src/robp_autocomplete/completion/bash/: colcon  ros2
src/robp_boot_camp_launch/: package.xml  pixi.toml
src/robp_boot_camp_launch/rviz/: boot_camp_part2.rviz
src/robp_interfaces/: CMakeLists.txt  package.xml  pixi.toml
src/robp_interfaces/action/: ArmExecute.action  DummyAction.action  Navigation.action
src/robp_interfaces/actions/: Navigation.action
src/robp_interfaces/msgs/: ArmControl.msg  ArmFeedback.msg  ObjectCandidateArrayMsg.msg  ObjectCandidateMsg.msg  ObjectDetectionArrayMsg.msg  ObjectDetectionMsg.msg
src/robp_interfaces/srvs/: GetGoal.srv
src/robp_launch/: package.xml  pixi.toml  setup.py
src/robp_launch/config/: HighAccuracyPreset.json  camera_settings.json  jj.json  joca.json
src/robp_launch/launch/: MS3_launch.yaml  arm_camera_launch.yaml  arm_launch.yaml  basics_launch.yaml  brain_testing_launch.yaml  lidar_launch.yaml  navigation_launch.yaml  notbasics_launch.yaml  phidgets_launch.yaml  realsense_launch.yaml  static_transform_launch.yaml
src/robp_phidgets/: pixi.toml
src/robp_phidgets/src/: encoders.cpp  motors.cpp  spatial.cpp  temperature.cpp
(+2 files in other folders)
